# Equities-Tick-Data-Lake-Prototype

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/agents/: test-writer.agent.md
clickhouse/init/: 01_schema.sql
datagen/: generate_ticks.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: mart_daily_summary.sql  mart_data_quality_summary.sql  schema.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_order_book.sql  stg_quotes.sql  stg_trades.sql
dbt_project/tests/: assert_no_duplicate_quotes.sql  assert_no_duplicate_trades.sql  assert_no_future_quotes.sql  assert_no_future_trades.sql  assert_vwap_within_range.sql
grafana/dashboards/: data_quality.json  market_overview.json  symbol_deep_dive.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: clickhouse.yml
kestra/: Dockerfile
kestra/flows/: equity_tick_daily_schedule.yml  equity_tick_pipeline.yml
scripts/: data_quality_check.py  load_data.py
